--- a/dicee.html
+++ b/dicee.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <title>Dicee</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+</head>
+<body>
 
-  </head>
-  <body>
+  <div class="container">
+    <h1>Refresh Me</h1>
 
-    <div class="container">
-      <h1>Refresh Me</h1>
-
-      <div class="dice">
-        <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
-      </div>
-
-      <div class="dice">
-        <p>Player 2</p>
-        <img class="img2" src="images/dice6.png">
-      </div>
-
+    <div class="dice">
+      <input type="text" id="player1Name" placeholder="Player 1 Name">
+      <p id="name1">Player 1</p>
+      <img class="img1" src="images/dice6.png">
+      <button onclick="rollDice(1)">Roll Dice</button>
     </div>
 
-    <script src="index.js" charset="utf-8"></script>
+    <div class="dice">
+      <input type="text" id="player2Name" placeholder="Player 2 Name">
+      <p id="name2">Player 2</p>
+      <img class="img2" src="images/dice6.png">
+      <button onclick="rollDice(2)">Roll Dice</button>
+    </div>
 
-      </body>
-    </html>
+  </div>
+
+  <script src="index.js" charset="utf-8"></script>
+
+</body>
+</html>
